--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,12 +3,12 @@
 }
 
 .App-logo {
-  animation: App-logo-spin infinite 20s linear;
+  animation: App-logo-pulse infinite 10s linear;
   height: 80px;
 }
 
 .App-header {
-  background-color: #222;
+  background-color: rgb(255, 255, 255);
   height: 150px;
   padding: 20px;
   color: white;
@@ -22,7 +22,7 @@
   font-size: large;
 }
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+@keyframes App-logo-pulse {
+  0% { transform: scale(1.0); }
+  50% { transform: scale(1.1); }
 }
